kubernetes/applications/pihole/ingress-manifest.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pihole-external
  namespace: applications
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /admin
    nginx.ingress.kubernetes.io/configuration-snippet: |
            proxy_set_header Accept-Encoding "";
            sub_filter
            '<meta http-equiv="Content-Security-Policy" content="default-src \'none\'; base-uri \'none\'; child-src \'self\'; form-action \'self\'; frame-src \'self\'; font-src \'self\'; connect-src \'self\'; img-src \'self\'; manifest-src \'self\'; script-src \'self\' \'unsafe-inline\'; style-src \'self\' \'unsafe-inline\'">'
            '<meta http-equiv="Content-Security-Policy" content="default-src \'none\'; base-uri \'none\'; child-src \'self\'; form-action \'self\'; frame-src \'self\'; font-src \'self\'; connect-src \'self\'; img-src \'self\' https://raw.githubusercontent.com; manifest-src \'self\'; script-src \'self\' \'unsafe-inline\'; style-src \'self\' https://raw.githubusercontent.com https://theme-park.dev \'unsafe-inline\'">';
            sub_filter '</head>' '<link rel="stylesheet" type="text/css" href="https://theme-park.dev/css/base/pihole/nord.css"></head>';
            sub_filter_once on;
spec:
  ingressClassName: "nginx"
  rules:
  - host: &host "pihole.${SECRET_PRIVATE_DOMAIN}"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: pihole-external
            port:
              number: 80
  tls:
    - hosts:
      - *host
---
apiVersion: v1
kind: Service
metadata:
  name: pihole-external
  namespace: applications
spec:
  ports:
  - name: pihole-external
    port: 80
    protocol: TCP
    targetPort: 80
  clusterIP: None
  type: ClusterIP
---
apiVersion: v1
kind: Endpoints
metadata:
  name: pihole-external
  namespace: applications
subsets:
- addresses:
  - ip: 172.22.0.1
  ports:
  - name: pihole-external
    port: 80
    protocol: TCP
